--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="./index.html">HOME</a></li>
                 <li><a href="./pages/newArrivals.html">NEW ARRIVALS</a></li>
                 <li><a href="./pages/bags.html">BAGS</a></li>
                 <li><a href="./pages/accesorios.html">ACCESORIES</a></li>
